Downdate upwards index.html

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="nb-NO">
   <head>
     <meta charset="UTF-8">
-<title>anderspippi.org</title>
-<meta property="org:title" content="anderspippi.org" />
+<title>anderspippi.github.io</title>
+<meta property="org:title" content="anderspippi.github.io" />
 <meta property="org:locale" content="en_US" />
-<link rel="canonical" href="https://anderspippi.org/" />
-<meta property="org:url" content="https://anderspippi.org/" />
-<meta property="org:site_name" content="anderspippi.org" />
+<link rel="canonical" href="https://anderspippi.github.io/" />
+<meta property="org:url" content="https://anderspippi.github.io/" />
+<meta property="org:site_name" content="anderspippi.github.io" />
 <meta property="org:type" content="website" />
 <meta name="twitter:card" content="summary" />
-<meta property="twitter:title" content="anderspippi.org" />
+<meta property="twitter:title" content="anderspippi.github.io" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","headline":"anderspippi.org","name":"anderspippi.org","url":"https://anderspippi.org/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","headline":"anderspippi.github.io","name":"anderspippi.github.io","url":"https://anderspippi.github.io/"}</script>
 
     <link rel="stylesheet" href="/assets/css/style.css?v=dc93237f271512cc55d3d8fb48a605d72086bcb9">
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
@@ -30,7 +30,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1><a href="https://anderspippi.org/">anderspippi.org</a></h1>
+      <h1><a href="https://anderspippi.github.io/">anderspippi.github.io</a></h1>
       
 
       <p>![UNO YO PEACE BRO!</p>
@@ -51,6 +51,6 @@
 <p>Alt god!
  t!
  //ap
- pippi](https://raw.githubusercontent.com/anderspippi/anderspippi.org/main/screencapture.bmp.bmp)</p>
+ pippi](https://raw.githubusercontent.com/anderspippi/anderspippi.github.io/main/screencapture.bmp.bmp)</p>
   </body>
 </html>
